更新为java8及以后的MetaspaceSize参数